<resources>
    <string name="app_name">MeeTu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you_shall_not_pass">You Shall Not Pass</string>
    <string name="spinner_select_member">Select Member</string>
    <string name="spinner_select_type">Select Type</string>
    <string name="spinner_select_category">Select Category</string>
    <string name="spinner_select_subject">Select Subject</string>
    <string name="spinner_select_city">Select City</string>
    <string name="spinner_select_district">Select District</string>
    <string name="card_about">About</string>
    <string name="empty_string" />
    <string name="reminder_subject_max">You can only select 3 subject</string>
    <string name="reminder_finish_user_info">Finishing the info would help when pairing</string>
    <string name="reminder_finish_article">Please finish the required information</string>
    <string name="reminder_invalid_time">Please select a valid time</string>
    <string name="reminder_post_event">Please complete the form</string>
    <string name="reminder_chatroom_message">Please send something</string>
    <string name="reminder_new_member_bold">Finish your profile</string>
    <string name="reminder_new_member">\" to have a full experience of the platform!\"</string>
    <string name="reminder_user_info">Remember to complete your profile</string>
    <string name="logger_no_bias">Tourist with no interest</string>
    <string name="logger_user_return">User Is Back</string>
    <string name="token_id">906661261750-eq9rl8502jk5v6at1ik754gfj7cm4t80.apps.googleusercontent.com</string>
    <string name="text_invitation">\ has sent an invitation of event: \</string>
    <string name="reminder_select_category">Please select a category</string>
    <string name="reminder_select_subject">Please select a subject</string>
    <string name="dialog_leave_title">Sure To Leave?</string>
    <string name="dialog_leave_content">Leaving will lead to losing record of the questionnaire</string>
    <string name="dialog_btn_pos">Sure</string>
    <string name="dialog_btn_neg">Cancel</string>
    <string name="reminder_select_city">Please select a city</string>
    <string name="reminder_select_district">Please select a district</string>
    <string name="reminder_select_gender">Please select a gender</string>
    <string name="toast_add_follow">Add To Follow List</string>
    <string name="toast_bye">Bye</string>
    <string name="pager_title_all">All</string>
    <string name="pager_title_my">My</string>
    <string name="dialog_title_delete">Sure To Delete?</string>
    <string name="dialog_delete_content">The article will be deleted permanently</string>
    <string name="snack_follow_add">Add to follow list</string>
    <string name="snack_follow_remove">Remove from follow list</string>
    <string name="dialog_leave_app_title">Sure To Leave?</string>
    <string name="dialog_leave_app_content">Leaving will close the app</string>
    <string name="menu_item_title_edit">EDIT</string>
    <string name="menu_item_title_save">SAVE</string>
    <string name="logger_already_added">Has Been Added</string>
    <string name="colon">:</string>
    <string name="member">Member</string>
    <string name="detail">Detail</string>
    <string name="student">Student</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="subject">Subject</string>
    <string name="read_more">Read More</string>
    <string name="btn_accept">ACCEPT</string>
    <string name="btn_decline">DECLINE</string>
    <string name="show_less">Show Less</string>
    <string name="tutor">Tutor</string>
    <string name="no_following_user">No Following User</string>
    <string name="btn_explore_more">EXPLORE MORE</string>
    <string name="no_following_articles">No Following Articles</string>
    <string name="explore_articles">EXPLORE ARTICLES</string>
    <string name="start_a_new_conversation">Start a new conversation</string>
    <string name="find_your_study_buddy">Find Your Study Buddy</string>
    <string name="assign_assistant">We will assign our best assistant to help</string>
    <string name="btn_start">START</string>
    <string name="your_location">Your Desired Location</string>
    <string name="btn_next">NEXT</string>
    <string name="would_prefer">You would prefer</string>
    <string name="click_to_choose">Click to choose</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_finish">Finish</string>
    <string name="select_subject">Select Your Subject</string>
    <string name="identity">Identity</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="introduction">Introduction</string>
    <string name="experience">Experience</string>
    <string name="follow">Follow</string>
    <string name="skip">Skip</string>
    <string name="try_with_other_traits">Try with other traits</string>
    <string name="no_match_found">No Match Found</string>
    <string name="no_notification">No Notification</string>
    <string name="to">To:</string>
    <string name="suggested">Suggested</string>
    <string name="welcome_back">Welcome back</string>
    <string name="greetings">A new day of learning begins!</string>
    <string name="recommendation">Recommendation based on interest:</string>
    <string name="no_recommendations">No Recommendations:</string>
    <string name="btn_setup_subject_bias">SETUP SUBJECT BIAS</string>
    <string name="newly_on_board">Newly On Board</string>
    <string name="articles_about">Articles About:</string>
    <string name="no_related_articles">No Related Articles</string>
    <string name="search_by_name">Search By Name</string>
    <string name="btn_going">Going?</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
    <string name="account_email">Account / Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="interested_subject">Interested Subject</string>
    <string name="about_yourself">Write something about yourself</string>
    <string name="indicator_message">Message...</string>
    <string name="message">Message</string>
    <string name="no_message">No Message</string>
    <string name="currently_vacant">Currently Vacant</string>
    <string name="all_type">All Type</string>
    <string name="study_group">Study Group</string>
    <string name="no_article">No Article</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="name">NAME</string>
    <string name="add_title">Add Title</string>
    <string name="type">TYPE</string>
    <string name="time">TIME</string>
    <string name="all_day">All-day</string>
    <string name="thu_april_14_2020">THU, April 14, 2020</string>
    <string name="_15_30">15:30</string>
    <string name="_18_00">18:00</string>
    <string name="attendee">ATTENDEE</string>
    <string name="title_location">LOCATION</string>
    <string name="set_location">Set Location</string>
    <string name="description">DESCRIPTION</string>
    <string name="add_description">Add Description</string>
    <string name="btn_save">SAVE</string>
    <string name="create_article">Create Article</string>
    <string name="enter_title">Enter Title</string>
    <string name="all_caps_location">LOCATION</string>
    <string name="all_caps_title">TITLE</string>
    <string name="enter_more_information">Enter more information</string>
    <string name="all_caps_subject">SUBJECT</string>
    <string name="all_caps_detail">DETAIL</string>
    <string name="btn_post">POST</string>
    <string name="welcome">Welcome</string>
    <string name="btn_go">GO</string>
    <string name="btn_maybe_later">MAYBE LATER</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="channel_id">MeeTu</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="notification_channel_description">MeeT Tutor</string>
    <string-array name="tag_array">
        <item>Reading</item>
        <item>Class</item>
        <item>Meetup</item>
    </string-array>
    <string-array name="article_array">
        <item>Study Group</item>
        <item>Find Tutor</item>
        <item>Find Student</item>
    </string-array>
    <string-array name="major_subject_array">
        <item>Language</item>
        <item>Curriculum</item>
        <item>Music</item>
        <item>Art</item>
        <item>Sport</item>
        <item>Exam</item>
    </string-array>
    <string-array name="default_array">

    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="curriculum_array">
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
    </string-array>
    <string-array name="music_array">
        <item>Piano</item>
        <item>Violin</item>
        <item>Flute</item>
        <item>Singing</item>
    </string-array>
    <string-array name="art_array">
        <item>Sketch</item>
        <item>Digital Painting</item>
        <item>Oil Painting</item>
    </string-array>
    <string-array name="sport_array">
        <item>Yoga</item>
        <item>CrossFit</item>
        <item>Swimming</item>
    </string-array>
    <string-array name="exam_array">
        <item>TOIEC</item>
        <item>TOFEL</item>
        <item>IELTS</item>
        <item>JLPT</item>
    </string-array>
    <string-array name="city_array">
        <item>Taipei</item>
        <item>New Taipei</item>
        <item>Taoyuan</item>
        <item>Taichung</item>
        <item>Kaohsiung</item>
    </string-array>
    <string-array name="taipei_array">
        <item>Songshan</item>
        <item>Xinyi</item>
        <item>Da’an</item>
        <item>Zhongshan</item>
        <item>Zhongzheng</item>
        <item>Datong</item>
        <item>Wanhua</item>
        <item>Wenshan</item>
        <item>Nangang</item>
        <item>Neihu</item>
        <item>Shilin</item>
        <item>Beitou</item>
    </string-array>
    <string-array name="new_taipei_array">
        <item>Banqiao</item>
        <item>Sanchong</item>
        <item>Zhonghe</item>
        <item>Yonghe</item>
        <item>Xinzhuang</item>
        <item>Xindian</item>
        <item>Luzhou</item>
    </string-array>
    <string-array name="taoyuan_array">
        <item>Zhongli</item>
        <item>Daxi</item>
        <item>Yangmei</item>
        <item>Luzhu</item>
        <item>Guishan</item>
        <item>Bade</item>
        <item>Longtan</item>
    </string-array>
    <string-array name="taichung_array">
        <item>Central</item>
        <item>East</item>
        <item>South</item>
        <item>West</item>
        <item>North</item>
        <item>Xitun</item>
        <item>Nantun</item>
        <item>Beitun</item>
        <item>Fengyuan</item>
        <item>Dajia</item>
        <item>Houli</item>
    </string-array>
    <string-array name="kaohsiung_array">
        <item>Zuoying</item>
        <item>Nanzi</item>
        <item>Sanmin</item>
        <item>Qijin</item>
        <item>Xiaogang</item>
        <item>Fengshan</item>
        <item>Gangshan</item>
    </string-array>
</resources>