<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.willy.metu.postarticle.PostArticleDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/bg_all_round_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/action_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.leave(false)}"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/title_create_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/create_article"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/layout_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/button_post"
                app:layout_constraintTop_toBottomOf="@id/title_create_article">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_type_study_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/type"
                        android:textColor="@color/black_12_alpha"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_type" />

                    <TextView
                        android:id="@+id/title_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/all_caps_title"
                        android:textColor="@color/black_12_alpha"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_type" />

                    <EditText
                        android:id="@+id/edit_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_title"
                        android:paddingStart="16dp"
                        android:text="@={viewModel.articleTitle}"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_title" />

                    <TextView
                        android:id="@+id/title_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/all_caps_location"
                        android:textColor="@color/black_12_alpha"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edit_title" />

                    <Spinner
                        android:id="@+id/spinner_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_location" />

                    <EditText
                        android:id="@+id/edit_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/enter_more_information"
                        android:paddingStart="16dp"
                        android:text="@={viewModel.articleLocation}"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_location" />

                    <TextView
                        android:id="@+id/title_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/all_caps_subject"
                        android:textColor="@color/black_12_alpha"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edit_location" />

                    <Spinner
                        android:id="@+id/spinner_subject_major"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_subject" />

                    <Spinner
                        android:id="@+id/spinner_subject_minor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_subject_major" />

                    <TextView
                        android:id="@+id/title_purpose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/all_caps_detail"
                        android:textColor="@color/black_12_alpha"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_subject_minor" />

                    <EditText
                        android:id="@+id/edit_detail"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/gray_light"
                        android:fontFamily="@font/roboto"
                        android:gravity="start"
                        android:hint="@string/enter_more_information"
                        android:paddingVertical="8dp"
                        android:paddingStart="16dp"
                        android:text="@={viewModel.articleDetail}"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_purpose" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>


            <View
                android:id="@+id/button_post"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_dialog_buttom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_scroll" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_post"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/button_post"
                app:layout_constraintEnd_toEndOf="@id/button_post"
                app:layout_constraintStart_toStartOf="@id/button_post"
                app:layout_constraintTop_toTopOf="@id/button_post" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ProgressTheme"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/button_post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_scroll" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>